found a typo: highTlightProteinId instead of highlightProteinId 😤
